@@ -2,7 +2,7 @@
  *
  * NRPE.H - NRPE Include File
  * Copyright (c) 1999-2006 Ethan Galstad (nagios@nagios.org)
- * Last Modified: 01-21-2006
+ * Last Modified: 02-03-2006
  *
  * License:
  *
@@ -40,8 +40,11 @@ int add_command(char *,char *);
 command *find_command(char *);
 void sighandler(int);
 int drop_privileges(char *,char *);
-int write_pid_file(void);
 int check_privileges(void);
+
+int write_pid_file(void);
+int remove_pid_file(void);
+
 void free_memory(void);
 int is_an_allowed_host(char *);
 int validate_request(packet *);
@@ -49,5 +52,8 @@ int contains_nasty_metachars(char *);
 int process_macros(char *,char *,int);
 int my_system(char *,int,int *,char *,int);            	/* executes a command via popen(), but also protects against timeouts */
 void my_system_sighandler(int);				/* handles timeouts when executing commands via my_system() */
+
+void sighandler(int);
+void child_sighandler(int);
 
 
