@@ -6,6 +6,8 @@ NRPE Changelog
 2.4 - ??/??/2006
 ----------------
 - Added option to allow week random seed (Gerhard Lausser)
+- Added optional command line prefix (Sean Finney)
+- Added ability to reload config file with SIGHUP
 
 
 2.3 - 01/23/2006
